# fe_scratch

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
examples/: adder.rs  barey.rs  fooey.rs
src/: foo.rs  lib.rs
tests/: test_foo.rs  test_lib.rs
