[package]
name = "fe_scratch"
description = "Scratch project for trying out stuff with a CI"
license = "MPL-2.0"
rust-version = "1.64"
version = "0.0.1"
edition = "2021"

[dependencies]
base64 = "0.13"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
pin-project-lite = "0.2"
tokio = { version = "1.21", features = ["fs", "net"] }

[dev-dependencies]
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
url = "2.3"